{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 43,
  "lineage": "44cb24d5-1923-8346-2254-a9686154eb6e",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:loadbalancer/app/emg-classifier-dev-alb/58ee6600c3858dfe",
            "arn_suffix": "app/emg-classifier-dev-alb/58ee6600c3858dfe",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "emg-classifier-dev-alb-462113082.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:loadbalancer/app/emg-classifier-dev-alb/58ee6600c3858dfe",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "emg-classifier-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05e9442fac5f14570"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-068a8cce012ef68de"
              },
              {
                "subnet_id": "subnet-0f81158fefe89ed84"
              }
            ],
            "subnets": [
              "subnet-068a8cce012ef68de",
              "subnet-0f81158fefe89ed84"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-alb"
            },
            "vpc_id": "vpc-020921e5964c8e3ad",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:listener/app/emg-classifier-dev-alb/58ee6600c3858dfe/4745addc401cf0db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:targetgroup/emg-classifier-api-tg/860e6e9d874a5b8e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:listener/app/emg-classifier-dev-alb/58ee6600c3858dfe/4745addc401cf0db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:loadbalancer/app/emg-classifier-dev-alb/58ee6600c3858dfe",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.api",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:targetgroup/emg-classifier-api-tg/860e6e9d874a5b8e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:listener-rule/app/emg-classifier-dev-alb/58ee6600c3858dfe/4745addc401cf0db/8073f754ddb236ed",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/docs",
                      "/health",
                      "/model-info",
                      "/predict",
                      "/test"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:listener-rule/app/emg-classifier-dev-alb/58ee6600c3858dfe/4745addc401cf0db/8073f754ddb236ed",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:listener/app/emg-classifier-dev-alb/58ee6600c3858dfe/4745addc401cf0db",
            "priority": 50,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.main",
            "module.ecs.aws_lb_target_group.api",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:targetgroup/emg-classifier-fe-tg/1ef4af043b37261a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:listener-rule/app/emg-classifier-dev-alb/58ee6600c3858dfe/4745addc401cf0db/b440e9fa598c6396",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/",
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:listener-rule/app/emg-classifier-dev-alb/58ee6600c3858dfe/4745addc401cf0db/b440e9fa598c6396",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:listener/app/emg-classifier-dev-alb/58ee6600c3858dfe/4745addc401cf0db",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.main",
            "module.ecs.aws_lb_target_group.api",
            "module.ecs.aws_lb_target_group.frontend",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:targetgroup/emg-classifier-api-tg/860e6e9d874a5b8e",
            "arn_suffix": "targetgroup/emg-classifier-api-tg/860e6e9d874a5b8e",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:targetgroup/emg-classifier-api-tg/860e6e9d874a5b8e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:418255731247:loadbalancer/app/emg-classifier-dev-alb/58ee6600c3858dfe"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "emg-classifier-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-api-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-api-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:targetgroup/emg-classifier-fe-tg/1ef4af043b37261a",
            "arn_suffix": "targetgroup/emg-classifier-fe-tg/1ef4af043b37261a",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:418255731247:targetgroup/emg-classifier-fe-tg/1ef4af043b37261a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:418255731247:loadbalancer/app/emg-classifier-dev-alb/58ee6600c3858dfe"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "emg-classifier-fe-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-frontend-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce593548bb42dd53",
            "arn": "arn:aws:ec2:eu-north-1:418255731247:elastic-ip/eipalloc-0ce593548bb42dd53",
            "association_id": "eipassoc-00a7c2f8de0e05e39",
            "domain": "vpc",
            "id": "eipalloc-0ce593548bb42dd53",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-08d2ae2059c7ea391",
            "private_dns": "ip-10-0-0-238.eu-north-1.compute.internal",
            "private_ip": "10.0.0.238",
            "public_dns": "ec2-16-171-84-25.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.84.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcb8b14e42ee32a7",
            "arn": "arn:aws:ec2:eu-north-1:418255731247:elastic-ip/eipalloc-0bcb8b14e42ee32a7",
            "association_id": "eipassoc-083d2427a93977ce4",
            "domain": "vpc",
            "id": "eipalloc-0bcb8b14e42ee32a7",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-05b3015e99e7d8dab",
            "private_dns": "ip-10-0-1-224.eu-north-1.compute.internal",
            "private_ip": "10.0.1.224",
            "public_dns": "ec2-13-62-61-183.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.61.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:internet-gateway/igw-0dcad3567d4598783",
            "id": "igw-0dcad3567d4598783",
            "owner_id": "418255731247",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-igw"
            },
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce593548bb42dd53",
            "association_id": "eipassoc-00a7c2f8de0e05e39",
            "connectivity_type": "public",
            "id": "nat-04baa32620aebfae1",
            "network_interface_id": "eni-08d2ae2059c7ea391",
            "private_ip": "10.0.0.238",
            "public_ip": "16.171.84.25",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068a8cce012ef68de",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcb8b14e42ee32a7",
            "association_id": "eipassoc-083d2427a93977ce4",
            "connectivity_type": "public",
            "id": "nat-0d5f9399fd53c23cf",
            "network_interface_id": "eni-05b3015e99e7d8dab",
            "private_ip": "10.0.1.224",
            "public_ip": "13.62.61.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f81158fefe89ed84",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:route-table/rtb-041b45fd0e6dc6427",
            "id": "rtb-041b45fd0e6dc6427",
            "owner_id": "418255731247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04baa32620aebfae1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:route-table/rtb-0be6523af792e90f8",
            "id": "rtb-0be6523af792e90f8",
            "owner_id": "418255731247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5f9399fd53c23cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:route-table/rtb-04b2484cfca741a8d",
            "id": "rtb-04b2484cfca741a8d",
            "owner_id": "418255731247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dcad3567d4598783",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5b682aa22f9cd26",
            "route_table_id": "rtb-041b45fd0e6dc6427",
            "subnet_id": "subnet-0f0c0ec41cc7cd8eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8f9f0bf0685c3a9",
            "route_table_id": "rtb-0be6523af792e90f8",
            "subnet_id": "subnet-04e4be8a87461681b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0212ec93ca3bf1e85",
            "route_table_id": "rtb-04b2484cfca741a8d",
            "subnet_id": "subnet-068a8cce012ef68de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6a0d39a7ce48950",
            "route_table_id": "rtb-04b2484cfca741a8d",
            "subnet_id": "subnet-0f81158fefe89ed84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:subnet/subnet-0f0c0ec41cc7cd8eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0c0ec41cc7cd8eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418255731247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:subnet/subnet-04e4be8a87461681b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e4be8a87461681b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418255731247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:subnet/subnet-068a8cce012ef68de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068a8cce012ef68de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418255731247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:subnet/subnet-0f81158fefe89ed84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f81158fefe89ed84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418255731247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:vpc/vpc-020921e5964c8e3ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3ea980c3f2c38a9",
            "default_route_table_id": "rtb-004b937406ccb577e",
            "default_security_group_id": "sg-04c912616558c1f95",
            "dhcp_options_id": "dopt-0759b4f9730d029c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020921e5964c8e3ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004b937406ccb577e",
            "owner_id": "418255731247",
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:security-group/sg-05e9442fac5f14570",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e9442fac5f14570",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "emg-classifier-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "418255731247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:418255731247:security-group/sg-07cae2fb11c6e8d92",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cae2fb11c6e8d92",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all traffic within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow API traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e9442fac5f14570"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Allow frontend traffic from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05e9442fac5f14570"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "emg-classifier-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "418255731247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "emg-classifier-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-020921e5964c8e3ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}